# salesforce-data-generator

./: .gitignore  3MONTH_PREDICTION_GUIDE.md  ACTIONABLE_INSIGHTS_GUIDE.md  CLAUDE.md  INDIVIDUAL_EXPLANATIONS_GUIDE.md  README.md  STREAMLIT_DASHBOARD_PLAN.md  analyze_churn_drivers.py  explain_predictions.py  explain_predictions_simple.py  feature_engineer.py  model_evaluator.py  model_trainer_1month.py  model_trainer_3month.py  optimize_threshold.py  predict.py  pyproject.toml  synthetic_generator.py
examples/: train_and_evaluate.sh
models_3month/: xgboost.joblib
tests/: __init__.py  test_feature_engineer.py  test_integration.py  test_model_trainer.py  test_synthetic_generator.py
