[project]
name = "salesforce-data-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "joblib>=1.4.0",
    "imbalanced-learn>=0.12.0",
    "shap>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.14.1",
]

[tool.ruff]
  line-length = 120
  target-version = "py312"

  [tool.ruff.lint]
  select = [
      "E",   # pycodestyle errors
      "W",   # pycodestyle warnings
      "F",   # pyflakes
      "I",   # isort
      "UP",  # pyupgrade
      "B",   # flake8-bugbear
      "C4",  # flake8-comprehensions
  ]
  ignore = []

  [tool.ruff.format]
  quote-style = "double"
  indent-style = "space"
